src/css/inserter-card.scss
/***********
* Block card
***********/
.maxi-sidebar {
	.block-editor-block-inspector.maxi-controls {
		.block-editor-block-card {
			padding: 9.5px 17px 20px;
			padding-bottom: 9px;
			box-shadow: 0px 5px 15px 0px rgba(119, 119, 119, 0.1);
			position: relative;
			border-bottom: 1px solid #f4f4f4;

			.block-editor-block-card__content {
				min-width: 87%;

				.block-editor-block-card__description {
					display: block !important;
					padding-top: 8px;
					text-align: justify;
					margin-left: -40px;
					border-top: 2px solid #eef0f0;
					margin-top: 10px;
				}
			}
		}
	}
}

/***************
* Block inserter
****************/
body .maxi-panel-body-inserter,
body .maxi-panel-body-inserter:hover,
body .maxi-panel-body-inserter.is-opened,
body .maxi-panel-body-inserter:active,
body .maxi-panel-body-inserter.components-panel__body h2,
body .maxi-panel-body-inserter.is-opened h2,
body .maxi-panel-body-inserter.components-panel__body h2:hover,
body .maxi-panel-body-inserter h2:active,
body .maxi-panel-body-inserter.is-opened h2:hover,
body .maxi-panel-body-inserter.is-opened h2:active,
body .maxi-panel-body-inserter h2 button,
body .maxi-panel-body-inserter h2 button:focus {
	background: #000000 !important;
	background-color: #000000 !important;
}

.maxi-panel-body-inserter h2 button,
.maxi-panel-body-inserter.is-opened h2 button {
	font-size: 16px;
	letter-spacing: 0px;
	font-weight: 400;
	color: #ffffff !important;
}

.maxi-panel-body-inserter *,
.maxi-panel-body-inserter.is-opened * {
	color: #ffffff !important;
}

.maxi-panel-body-inserter h2 button:before {
	content: url("../img/maxi-icon-white.svg");
	display: inline-block;
	position: absolute;
	top: 8px;
	width: 25px;
}

.maxi-panel-body-inserter h2 button span {
	margin-left: 40px;
}

button[class*="maxi-blocks"] {
	border-radius: 10px;
	padding-top: 10px !important;
	max-width: 95%;
	margin: 0 auto;
}

button[class*="maxi-blocks"] .block-editor-block-types-list__item-icon {
	background: #fff;
	border-radius: 10rem;
	margin: auto;
	padding: 0;
	height: 45px;
	width: 45px;
}

button[class*="maxi-blocks"] .block-editor-block-types-list__item-icon .block-editor-block-icon {
	margin: 6.5px auto !important;
}

button[class*="maxi-blocks"] span.block-editor-block-types-list__item-title {
	color: black !important;
	font-style: 16px;
}

.maxi-sidebar .block-editor-block-card {
	font-size: 20px;
	margin-left: 0 !important;
	letter-spacing: 0px;
	color: #fff;
	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue,
		sans-serif;
	background: #fff;
	font-weight: 400;
}

.maxi-sidebar .block-editor-block-card .block-editor-block-card__title {
	line-height: 33px;
	margin-bottom: 0;
	background: none !important;
	position: relative;
	font-size: 1rem;
	color: #232433;
	font-weight: 500;
}

.maxi-controls .block-editor-block-card__content {
	background: inherit !important;
}

.maxi-sidebar .block-editor-block-icon {
	width: 33px;
	height: 33px;
}

.maxi-sidebar .block-editor-block-icon svg {
	transform: scale(1.63);
}

// .maxi-sidebar .block-editor-block-inspector.maxi-controls .block-editor-block-card,
// .maxi-sidebar .edit-post-settings-sidebar__panel-block.maxi-controls .block-editor-block-card {
// 	padding: 9.5px 17px 20px;
// 	padding-bottom: 9px;
// }

// .maxi-sidebar .block-editor-block-card__content {
// 	min-width: 87%;
// }

// .maxi-sidebar .block-editor-block-card__description {
// 	padding-top: 8px;
// 	text-align: justify;
// 	margin-left: -12.5%;
// }

// .block-editor-block-card::after {
// 	position: absolute;
// 	content: url("../img/maxi-logo.svg");
// 	width: 1.9rem;
// 	right: 10px;
// }

// .block-editor-block-card__content > .block-editor-block-card__title {
// 	color: #fff;
// }

// .block-editor-block-card__content > .block-editor-block-card__description {
// 	display: block !important;
// }

// /***************
// * Block inserter
// ****************/
// body .maxi-panel-body-inserter,
// body .maxi-panel-body-inserter:hover,
// body .maxi-panel-body-inserter.is-opened,
// body .maxi-panel-body-inserter:active,
// body .maxi-panel-body-inserter.components-panel__body h2,
// body .maxi-panel-body-inserter.is-opened h2,
// body .maxi-panel-body-inserter.components-panel__body h2:hover,
// body .maxi-panel-body-inserter h2:active,
// body .maxi-panel-body-inserter.is-opened h2:hover,
// body .maxi-panel-body-inserter.is-opened h2:active,
// body .maxi-panel-body-inserter h2 button,
// body .maxi-panel-body-inserter h2 button:focus {
// 	background: #000000 !important;
// 	background-color: #000000 !important;
// }

// .maxi-panel-body-inserter h2 button,
// .maxi-panel-body-inserter.is-opened h2 button {
// 	font-size: 16px;
// 	letter-spacing: 0px;
// 	font-weight: 400;
// 	color: #ffffff !important;
// }

// .maxi-panel-body-inserter *,
// .maxi-panel-body-inserter.is-opened * {
// 	color: #ffffff !important;
// }

// .maxi-panel-body-inserter h2 button:before {
// 	content: url("../img/maxi-icon-white.svg");
// 	display: inline-block;
// 	position: absolute;
// 	top: 8px;
// 	width: 25px;
// }

// .maxi-panel-body-inserter h2 button span {
// 	margin-left: 40px;
// }

// button[class*="maxi-blocks"] {
// 	border-radius: 10px;
// 	padding-top: 10px !important;
// 	max-width: 95%;
// 	margin: 0 auto;
// }

// button[class*="maxi-blocks"] .block-editor-block-types-list__item-icon {
// 	background: black;
// 	border-radius: 10rem;
// 	margin: auto;
// 	padding: 0;
// 	height: 37px;
// 	width: 37px;
// }

// button[class*="maxi-blocks"] .block-editor-block-types-list__item-icon .block-editor-block-icon {
// 	margin: 6.5px auto !important;
// }

// button[class*="maxi-blocks"] span.block-editor-block-types-list__item-title {
// 	color: black !important;
// 	font-style: 16px;
// }

// .maxi-sidebar .block-editor-block-card {
// 	font-size: 20px;
// 	margin-left: 0 !important;
// 	letter-spacing: 0px;
// 	color: #fff;
// 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue,
// 		sans-serif;
// 	background: #000;
// 	font-weight: 400;
// }

// .maxi-sidebar .block-editor-block-card .block-editor-block-card__title {
// 	line-height: 33px;
// 	margin-bottom: 0;
// 	background: none !important;
// 	position: relative;
// }

// .maxi-controls .block-editor-block-card__content {
// 	background: inherit !important;
// }

// .maxi-sidebar .block-editor-block-icon {
// 	width: 33px;
// 	height: 33px;
// }

// .maxi-sidebar .block-editor-block-icon svg {
// 	transform: scale(1.63);
// }

